--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
             <a href="https://hackclub.com/">orpheus @ hackclub</a>
         </div>
         <div>
-            <p1>After high school, I plan to study computer engineering, which in general does not involve much chemistry. However in Grade 12 Chemistry, the unit that stood out to me the most the electrochemistry. I have designed plenty of PCBs (Printed Circuit Boards) and used electronics in my everyday life. After learning about the redox table and galvanic cell, I have a better understanding why certain materials are used in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
+            <p1>After high school, I plan to study computer engineering, which generally does not involve much chemistry (or so I thought). However in Grade 12 Chemistry, the unit that stood out to me the most the electrochemistry. I have designed plenty of PCBs (Printed Circuit Boards) and used electronics in my everyday life. After learning about the redox table and galvanic cell, I have a better understanding why certain materials are used in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
             <h2>By Selena</h2>
         </div>
     </div>
 
     <div class="pcb">
-        <h3>Printed Circuit Boards</h3>
+        <h3>Printed Circuit Boards</h3> 
+        <div class="definition">
+            <p2>what are they?</p2>
+        </div>
     </div>
 
     <div class="components">
