added sections and title animations

--- a/index.html
+++ b/index.html
@@ -13,23 +13,29 @@
             <a href="https://hackclub.com/">orpheus @ hackclub</a>
         </div>
         <div>
-            <p1>After high school, I plan to study computer engineering, which generally does not involve much chemistry (or so I thought). However in Grade 12 Chemistry, the unit that stood out to me the most the electrochemistry. I have designed plenty of PCBs (Printed Circuit Boards) and used electronics in my everyday life. After learning about the redox table and galvanic cell, I have a better understanding why certain materials are used in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
+            <p1>After high school, I plan to study computer engineering, which generally does not involve much chemistry (or so I thought). However in Grade 12 Chemistry, the unit that stood out to me the most the electrochemistry. I have designed plenty of PCBs (Printed Circuit Boards) and used electronics in my everyday life. After learning about the redox table and galvanic cell, I have a better understanding why certain materials are use in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
             <h2>By Selena</h2>
         </div>
     </div>
 
     <div class="pcb">
-        <h3>Printed Circuit Boards</h3> 
+        <h3>Printed Circuit Boards</h3>
+        <hl></hl>
         <div class="section">
             <div class="definition">
-            <p2>what are they?</p2>
-            <img src="assets/pcb.png" width="350px">
+                <p1>PCBs are flat boards made up of layers of insulation and conductive materials to make circuits and electronics compact and efficient. These insulating materials are usually made of fiber glass or expoxy and the conductive layers are copper. The copper layers are etched to make routes to make connections in the circuit. In the diagram below, you can see the red and blue copper routes in between the layers. </p1>
+                <div>
+                    <img src="assets/pcb.png" width="500px">
+                </div>
             </div>
             <div id="3dPCB">
                 <model-viewer src="assets/pathfinder.gltf" camera-controls touch-action="pan-y"></model-viewer>
                 this is a 3D model of a PCB I designed!
             </div>
-        </div>   
+        </div> 
+         <div class="row">
+                <p1>However, PCBs can corrode overtime. Most commonly, it is due to oxidation of the copper. By adding moisture </p1>
+        </div>  
     </div>
 
     <div class="components">
@@ -38,6 +44,13 @@
 
     <div class="batteries">
         <h3>Batteries</h3>
+    </div>
+
+    <div class="sources">
+        <h3>Sources</h3>
+        <ul>
+            <li><a href="https://industries.winstonind.com/what-is-a-printed-circuit-board/">What is a circuit board?</a></li>
+        </ul>
     </div>
     <script type="module" src="script.js"></script>
 </body>
