--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Electrochemisty and Engineering</h1>
+    <p>hover me ^^^</p>
 
     <div class="introduction">
         <div>
@@ -13,17 +14,17 @@
             <a href="https://hackclub.com/">orpheus @ hackclub</a>
         </div>
         <div>
-            <p1>After high school, I plan to study computer engineering, which generally does not involve much chemistry (or so I thought). However in Grade 12 Chemistry, the unit that stood out to me the most the electrochemistry. I have designed plenty of PCBs (Printed Circuit Boards) and used electronics in my everyday life. After learning about the redox table and galvanic cell, I have a better understanding why certain materials are use in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
+            <p1>After high school, I plan to study computer engineering, which generally does not involve much chemistry (or so I thought). However in Grade 12 Chemistry, the unit that stood out to me the most the electrochemistry. I have designed plenty of PCBs and used electronics in my everyday life. After learning about the redox reactions and galvanic cell, I have a better understanding why certain materials are use in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
             <h2>By Selena</h2>
         </div>
     </div>
 
+    <h3>What are Printed Circuit Boards?</h3>
+
     <div class="pcb">
-        <h3>Printed Circuit Boards</h3>
-        <hl></hl>
         <div class="section">
             <div class="definition">
-                <p1>PCBs are flat boards made up of layers of insulation and conductive materials to make circuits and electronics compact and efficient. These insulating materials are usually made of fiber glass or expoxy and the conductive layers are copper. The copper layers are etched to make routes to make connections in the circuit. In the diagram below, you can see the red and blue copper routes in between the layers. </p1>
+                <p1>PCBs are flat boards made up of layers of insulation and conductive materials to make circuits and electronics compact and efficient. These insulating materials are usually made of fiber glass or expoxy and the conductive layers are copper. The copper layers are etched to make routes and make connections in the circuit. In the diagram below, you can see the red and blue copper routes in between the layers. </p1>
                 <div>
                     <img src="assets/pcb.png" width="500px">
                 </div>
@@ -34,12 +35,35 @@
             </div>
         </div> 
          <div class="row">
-                <p1>However, PCBs can corrode overtime. Most commonly, it is due to oxidation of the copper. By adding moisture </p1>
-        </div>  
-    </div>
+                <p1>However, PCBs can corrode overtime usually by the oxidation of the copper. Added moisture leads the copper to rust, where I learned that last semester. The lesson explored how the copper goes through a redox reaction with the oxygen and creates rust from migrating through the water droplet. By understanding this concept, I can apply this to electronics when preventing corrosion and being mindful of the materials my PCB is made out of. The ways it creates moisture is from high humidity, pollutants like smoke, tempurature flucuations, and chemical exposure.</p1>
+        </div> 
+           
+            <div class="section">
+                <div>
+                    <img src="assets/corrosion.jpg" width="500px">
+                </div>
+                 <div>
+                    <p1>The follow reaction below explains the corrosion of copper:</p1>
+                    <div>
+                        <p3>Cu(s) + H2O(l) → CuO(s) + H2(g)</p3>
+                    </div>
+                 </div> 
+            </div>
+        </div>
+            
+            <div>
+                <p1>In this reaction, the copper solid reacts with water to form copper oxide solid and hydrogen gas. The copper oxide is the rust that forms on the PCB.</p1>
+            </div>  
 
-    <div class="components">
-        <h3>Components</h3>
+        </div> 
+
+        <div class="section">
+            <div>
+                <p1>During manufacturing, we can reduce this by
+                    <li>Galvanization: using a protective coating on the copper</li>
+                </p1>
+            </div>
+        </div>
     </div>
 
     <div class="batteries">
