--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="https://hackclub.com/">orpheus @ hackclub</a>
         </div>
         <div>
-            <p1>After high school, I plan to study computer engineering, which generally does not involve much chemistry (or so I thought). However in Grade 12 Chemistry, the unit that stood out to me the most the electrochemistry. I have designed plenty of PCBs and used electronics in my everyday life. After learning about the redox reactions and galvanic cell, I have a better understanding why certain materials are used in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
+            <p1>After high school, I plan to study computer engineering, which generally does not involve much chemistry (or so I thought). However in Grade 12 Chemistry, the unit that stood out to me the most was electrochemistry. I have designed plenty of PCBs and used electronics in my everyday life. After learning about the redox reactions and galvanic cell, I have a better understanding why certain materials are used in computer components. After more research, I learned that computers and chemistry have more 'chemistry' than I thought!</p1>
             <h2>By Selena</h2>
         </div>
     </div>
@@ -35,7 +35,7 @@
             </div>
         </div> 
          <div class="row">
-                <p1 id="centre">However, PCBs can corrode overtime usually by the oxidation of the copper. Added moisture leads the copper to rust, where I learned that last semester. The lesson explored how the copper goes through a redox reaction with the oxygen and creates rust from migrating through the water droplet. By understanding this concept, I can apply this to electronics when preventing corrosion and being mindful of the materials my PCB is made out of. The ways it creates moisture is from high humidity, pollutants like smoke, temperature flucuations, and chemical exposure.</p1>
+                <p1 id="centre">However, PCBs can corrode overtime usually by the oxidation of the copper. Added moisture leads the copper to rust, where I learned that last semester. The lesson explored how the copper goes through a redox reaction with the oxygen and creates rust from migrating to the surface through the water droplet. By understanding this concept, I can apply this to electronics when preventing corrosion and being mindful of the materials my PCB is made out of. The ways it creates moisture is from high humidity, pollutants like smoke, temperature flucuations, and chemical exposure.</p1>
         </div> 
            
             <div class="section">
@@ -60,7 +60,7 @@
             <p1>We can reduce corrosion by</p1>
                     <li>Galvanization: using a protective coating on the copper to prevent moisture.</li>
                     <li>Material Selection: gold-plated components are not as reactive or certain copper alloys have greater resistance to corrosion.</li>
-                    <li>Maintenance: Monitoring humidity and inspected for potential pollutants can reduce the chance for corrosion in the future.</li>
+                    <li>Maintenance: monitoring humidity and inspected for potential pollutants can reduce the chance for corrosion in the future.</li>
 
             <h3>Batteries</h3>
             <div class="section">
@@ -86,7 +86,7 @@
             </div>
 
             <div class="row">
-                <p1>This is why for computer engineers and manfufactures to be aware of the materials when working with PCBs to prevent faulty products and to maintain them. Or in my case, tinkering with them! Like I said earlier, I design my own PCBs and exploring the connection through electrochemistry has given me a better understanding of how they work. When working with them, I need to be mindful of the materials when I'm soldering components so I don't melt off the non-conductive layer or make sure to maintain my PCBs an batteries to prevent corrosion. Electrochemistry is definitley a topic that I will come back to in University, and looking into how it applies to what I'm currently working on makes me look forward to it! </p1>
+                <p1>This is why for computer engineers and manufacturers to be aware of the materials when working with PCBs to prevent faulty products and to maintain them. Or in my case, tinkering with them! Like I said earlier, I design my own PCBs and exploring the connection through electrochemistry has given me a better understanding of how they work. When working with them, I need to be mindful of the materials when I'm soldering components so I don't melt off the non-conductive layer or make sure to maintain my PCBs and batteries to prevent corrosion. Electrochemistry is definitley a topic that I will come back to in university, and looking into how it applies to what I'm currently working on makes me look forward to it! </p1>
             </div>
     </div> <!-- this is the master ending div-->
 
